argocd/tools/karakeep/chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: ghcr.io/karakeep-app/karakeep-chrome:release
          args:
            - --disable-gpu
            - --disable-dev-shm-usage
            - --hide-scrollbars
            - --disable-blink-features=AutomationControlled
            - --window-size=1440,900
