argocd/tools/karakeep/karakeep-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep-internal-route
  namespace: tools
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["karakeep.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: karakeep-web
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep-route
  namespace: tools
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-default
    namespace: default
  hostnames: ["karakeep.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: karakeep-web
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
